--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# backup pom from hacky way of formatting xml
+pom.xml.BAK
+
+# maven stuff
+target/
+.mvn/
