--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
           <artifactId>formatter-maven-plugin</artifactId>
           <version>2.7.1</version>
         </plugin>
+        <plugin>
+          <groupId>net.revelc.code</groupId>
+          <artifactId>impsort-maven-plugin</artifactId>
+          <version>1.12.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
